network usage for min-max

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <hr>
     <div class="container">
       <h5>after using min-max algorithm</h5>
+      <div  class="chart" id="chart4" ></div>
     </div>
   </div>
   
