--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <div class="container">
       <h5>after using min-max algorithm</h5>
       <div  class="chart" id="chart4" ></div>
+      <div  class="chart" id="chart5" ></div>
+      <div  class="chart" id="chart6" ></div>
     </div>
   </div>
   
