added the summary of results: with fuzzy unoptimised

--- a/index.html
+++ b/index.html
@@ -1,41 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="yahya-sekinat masters project" >
-  <meta name="keywords" content="web dev portfolio resume" >
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" 
-  integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" 
-  crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" integrity="sha256-ECB9bbROLGm8wOoEbHcHRxlHgzGqYpDtNTgDTyDz0wg=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/main.css">
-  
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="./js/main.js"></script>
-  <title>trabajo fin de master para sekinah</title>
-</head>
-<body>
-  <div class="container all-of-them">
-    <div class="container">
-      <h5>original data: ifogsim defaults</h5>
-      <div class="chart" id="chart_div"></div>
-      <div class="chart" id="chart2"></div>
-      <div  class="chart" id="chart3" ></div>
-    </div>
-    <br>
-    <hr>
-    <div class="container">
-      <h5>after using min-max algorithm</h5>
-      <div  class="chart" id="chart4" ></div>
-      <div  class="chart" id="chart5" ></div>
-      <div  class="chart" id="chart6" ></div>
-    </div>
-  </div>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="yahya-sekinat masters project" />
+    <meta name="keywords" content="web dev portfolio resume" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
+      integrity="sha256-ECB9bbROLGm8wOoEbHcHRxlHgzGqYpDtNTgDTyDz0wg="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
 
-</body>
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="./css/mobile.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
+    <script src="./js/main.js"></script>
+    <title>sept 2020</title>
+  </head>
+  <body>
+    <div class="container all-of-them">
+      <div class="container" id="brief intro">
+        <p>
+          tldr: this is an optimisation problem. We have used a genetic fuzzy
+          rule based system to perfrom the optimisation. The problem domain is
+          fog computing applications
+        </p>
+      </div>
+      <div class="container">
+        <!-- <h5>original data: ifogsim defaults</h5> -->
+        <!-- <div class="chart" id="chart_div"></div>
+      <div class="chart" id="chart2"></div> -->
+        <div class="chart" id="chart3"></div>
+      </div>
+      <br />
+      <hr />
+      <div class="container">
+        <p>
+          We have restricted the focus of our optimisation algorithm to just one
+          paramter: energy consumption
+        </p>
+      </div>
+      <div class="container">
+        <!-- <h5>after our approach</h5> -->
+        <!-- <div class="chart" id="chart4"></div>
+        <div class="chart" id="chart5"></div> -->
+        <div class="chart" id="chart6"></div>
+      </div>
+    </div>
+  </body>
 </html>
